kubernetes/services/job-listing-gui/ingress.job-listing-gui.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: job-listing-gui
  namespace: job-listing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - job-listing-gui.lan
      secretName: job-listing-gui-tls
  rules:
    - host: job-listing-gui.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: job-listing-gui
                port:
                  number: 790
